# fccu-sim

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
.github/workflows/: ci.yml
cmake/: embed_file.cmake
docs/: make_control_room.py  make_plots.py
docs/media/: captions.md
include/fccu/: actuators.hpp  control_loop.hpp  datalog.hpp  fuel_cell.hpp  plant.hpp  runtime.hpp  safety.hpp  sensors.hpp  state_machine.hpp  tank.hpp  types.hpp
include/scenario/: scenario_runner.hpp
src/: campaign.cpp  control_loop.cpp  fuel_cell.cpp  http_api.cpp  http_api.hpp  main.cpp  plant.cpp  runtime.cpp  safety.cpp  scenario_runner.cpp  state_machine.cpp
tests/: test_actuators.cpp  test_control_loop.cpp  test_fuel_cell.cpp  test_http.cpp  test_integration.cpp  test_safety.cpp  test_scenario.cpp  test_sensors.cpp  test_state_machine.cpp  test_tank.cpp
ui/static/: index.html
